Add benchmarking for addition,sub and multiplication

--- a/notebooks/tenseal_introduction.ipynb
+++ b/notebooks/tenseal_introduction.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<tenseal.enc_context.Context at 0x7f2969ce8490>"
+       "<tenseal.enc_context.Context at 0x7f0e0ce9a2e0>"
       ]
      },
      "execution_count": 2,
@@ -164,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "<tenseal.tensors.bfvvector.BFVVector at 0x7f2969ce8790>"
+       "<tenseal.tensors.bfvvector.BFVVector at 0x7f0e0ce49340>"
       ]
      },
      "execution_count": 4,
@@ -366,6 +366,155 @@
     "We just made both ciphertext to plaintext (c2p) and ciphertext to ciphertext (c2c) evaluations (add, sub and mul). \n",
     "\n",
     "NOTE : An important thing to note is that you should never encrypt your plaintext values to evaluate them with ciphertexts if they don't need to be kept private. That's because c2p evaluations are more efficient than c2c."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29ae2e76-b3a1-4308-a2cb-78374ca2e308",
+   "metadata": {},
+   "source": [
+    "### Timing for each operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c167a3bd-72ce-441d-8093-55c8e747a14f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import time\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5c03e92e-59f0-4f4d-a895-a3a5aa88b774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = [5, 1, 2, 3, 4]\n",
+    "v2 = [4, 3, 2, 1, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0acbfe8b-769a-4c37-a70a-05edb91826aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc_v1 = ts.bfv_vector(context, v1)\n",
+    "enc_v2 = ts.bfv_vector(context, v2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43c64ff2-0c90-4c34-9d5f-0253bb645b22",
+   "metadata": {},
+   "source": [
+    "#### Time taken to perform addition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e1d42d8e-8f9b-41c4-b26c-683dddc4c667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homomorphic Addition takes:\n",
+      "27 µs ± 976 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "Vector Addition takes:\n",
+      "2.07 µs ± 36.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "Vector Addition is 12.887042566865047 times faster than Homomorphic Addition\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Homomorphic Addition takes:\")\n",
+    "he_add =  %timeit -o (enc_v1 + enc_v2)\n",
+    "print(\"Vector Addition takes:\")\n",
+    "v_add = %timeit -o (np.array(v1) + np.array(v2))\n",
+    "res = he_add.best / v_add.best\n",
+    "\n",
+    "print(\"Vector Addition is {} times faster than Homomorphic Addition\".format(res))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "998b28ad-84a5-4e01-91c8-d3b01d60c18f",
+   "metadata": {},
+   "source": [
+    "#### Time taken to perform substraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1cac605e-49a6-4969-b871-4c8ce0bb3359",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homomorphic Subtraction takes:\n",
+      "25.2 µs ± 104 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "Vector Subtraction takes:\n",
+      "2.06 µs ± 32.2 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "Vector Subtraction is 12.345815039326867 times faster than Homomorphic Subtraction\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Homomorphic Subtraction takes:\")\n",
+    "he_sub =  %timeit -o (enc_v2 - enc_v1)\n",
+    "print(\"Vector Subtraction takes:\")\n",
+    "v_sub = %timeit -o (np.array(v2) - np.array(v1))\n",
+    "\n",
+    "res = he_sub.best / v_sub.best\n",
+    "print(\"Vector Subtraction is {} times faster than Homomorphic Subtraction\".format(res))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edb2e0c9-2dd8-46c0-a9ce-e9e58600dff3",
+   "metadata": {},
+   "source": [
+    "#### Time taken to perform multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d18cb332-ce16-4b4f-a135-888d3b0485ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homomorphic Multiplication takes:\n",
+      "5.1 ms ± 92.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "Vector Multiplication takes:\n",
+      "2.08 µs ± 25.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "Vector Multiplication is 2430.3839794233263 times faster than Homomorphic Multiplication\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Homomorphic Multiplication takes:\")\n",
+    "he_mul =  %timeit -o (enc_v2 * enc_v1)\n",
+    "print(\"Vector Multiplication takes:\")\n",
+    "v_mul = %timeit -o (np.array(v2) * np.array(v1))\n",
+    "\n",
+    "res = he_mul.best / v_mul.best\n",
+    "print(\"Vector Multiplication is {} times faster than Homomorphic Multiplication\".format(res))"
    ]
   },
   {
