Add time benchmarking to pallier nb

--- a/notebooks/demo-simple.ipynb
+++ b/notebooks/demo-simple.ipynb
@@ -103,12 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a329524a-663a-48b1-a191-a0890c8df5b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from phe import paillier"
+    "from phe import paillier\n",
+    "import statistics"
    ]
   },
   {
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "516e9e49-9ba0-48d7-b4b2-121e9e0e7dc7",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "a55ca8b2-d70e-4f78-8359-ad111c3b761e",
    "metadata": {},
    "outputs": [],
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "53320457-d088-4e16-9705-97fbce63e565",
    "metadata": {},
    "outputs": [],
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "5479f718-7df8-4c4f-aca3-951221df5413",
    "metadata": {},
    "outputs": [
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "df8806b9-cdb2-4ef5-8823-701164fe6ea6",
    "metadata": {},
    "outputs": [],
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "da0eb3c1-bb5a-44ea-a08e-8259dcf98b95",
    "metadata": {},
    "outputs": [
@@ -223,12 +224,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Add an ancrypted number to a number: 35\n"
+      "Add an encrypted number to a number: 35\n"
      ]
     }
    ],
    "source": [
     "print(\"Add an encrypted number to a number:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b88ea480-60d4-4933-8128-989566f15e7d",
+   "metadata": {},
+   "source": [
+    "Calculate the time taken to perform addition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c514af11-1658-4e01-ba1e-a1b1d56eaf78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homomorphic Addition takes:\n",
+      "92.8 µs ± 3.4 µs per loop (mean ± std. dev. of 7 runs, 2 loops each)\n",
+      "Median for HE addition 0.0001842719502747059\n",
+      "Vector Addition takes:\n",
+      "102 ns ± 62.3 ns per loop (mean ± std. dev. of 7 runs, 2 loops each)\n",
+      "Median for Vector Addition 1.448206603527069e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Homomorphic Addition takes:\")\n",
+    "he_add =  %timeit -n2 -o (cipher_num1 + cipher_num2)\n",
+    "median_he = statistics.median(he_add.all_runs)\n",
+    "print(\"Median for HE addition {}\".format(median_he))\n",
+    "print(\"Vector Addition takes:\")\n",
+    "v_add = %timeit -n2 -o (num1 + num2)\n",
+    "res = he_add.best / v_add.best\n",
+    "median_vec = statistics.median(v_add.all_runs)\n",
+    "print(\"Median for Vector Addition {}\".format(median_vec))\n",
+    "result_median = median_he/ median_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9c494f6f-6e1e-4607-b810-fdc4e953f9f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector Addition is 1258.9540983606557 times faster than Homomorphic Addition\n",
+      "Median Vector Addition is 1272.4147909967846 times better than Median Homomorphic Addition\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Vector Addition is {} times faster than Homomorphic Addition\".format(res))\n",
+    "print(\"Median Vector Addition is {} times better than Median Homomorphic Addition\".format(result_median))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f6f4b81b-7d34-4360-a13e-9a29b6fb939c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Good luck with that...",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_10148/2493274443.py\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Multiplication is not supported by pallier two ciphertexts are not supported,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# here's an error to add evidence:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcipher_num1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcipher_num2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpriv_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/app-root/lib64/python3.8/site-packages/phe/paillier.py\u001b[0m in \u001b[0;36m__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    506\u001b[0m         \u001b[0;34m\"\"\"Multiply by an int, float, or EncodedNumber.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    507\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEncryptedNumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 508\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Good luck with that...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    509\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    510\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEncodedNumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: Good luck with that..."
+     ]
+    }
+   ],
+   "source": [
+    "# Multiplication is not supported by pallier two ciphertexts are not supported,\n",
+    "# here's an error to add evidence:\n",
+    "result = cipher_num1 * cipher_num2\n",
+    "result = priv_key.decrypt(result)"
    ]
   },
   {
@@ -242,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
