Add memory tracker to tenseal nbs

--- a/notebooks/tenseal_ckks.ipynb
+++ b/notebooks/tenseal_ckks.ipynb
@@ -22,7 +22,9 @@
    "outputs": [],
    "source": [
     "import tenseal as ts\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import time as time\n",
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -89,11 +91,11 @@
     {
      "data": {
       "text/plain": [
-       "[9.000000003111897,\n",
-       " 3.999999997718233,\n",
-       " 4.000000000318537,\n",
-       " 4.000000002821806,\n",
-       " 8.999999999744613]"
+       "[9.00000000168854,\n",
+       " 3.999999998110309,\n",
+       " 3.999999999964051,\n",
+       " 4.000000000037462,\n",
+       " 9.000000001457845]"
       ]
      },
      "execution_count": 5,
@@ -125,18 +127,24 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Addition takes:\n",
-      "59.2 µs ± 626 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "56.4 µs ± 358 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "peak memory: 174.73 MiB, increment: 0.11 MiB\n",
       "Vector Addition takes:\n",
-      "2.09 µs ± 26.2 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Addition is 28.247359974657833 times faster than Homomorphic Addition\n"
+      "1.56 µs ± 6.23 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 174.94 MiB, increment: 0.00 MiB\n",
+      "Vector Addition is 36.068307582849556 times faster than Homomorphic Addition\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Addition takes:\")\n",
     "he_add =  %timeit -o (enc_v1 + enc_v2)\n",
+    "he_add_mem =  %memit -o (enc_v1 + enc_v2)\n",
+    "\n",
     "print(\"Vector Addition takes:\")\n",
     "v_add = %timeit -o (np.array(v1) + np.array(v2))\n",
+    "v_add_mem = %memit -o (np.array(v1) + np.array(v2))\n",
+    "\n",
     "res = he_add.best / v_add.best\n",
     "\n",
     "print(\"Vector Addition is {} times faster than Homomorphic Addition\".format(res))"
@@ -181,11 +189,11 @@
     {
      "data": {
       "text/plain": [
-       "[0.9999999966010994,\n",
-       " -2.0000000002092166,\n",
-       " -5.7121862795384004e-11,\n",
-       " 2.0000000032285046,\n",
-       " -0.9999999998236382]"
+       "[0.9999999930663853,\n",
+       " -2.0000000009764403,\n",
+       " 2.2837109425744018e-09,\n",
+       " 2.000000000272445,\n",
+       " -0.9999999986212919]"
       ]
      },
      "execution_count": 8,
@@ -217,18 +225,24 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Subtraction takes:\n",
-      "53.4 µs ± 974 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "52.4 µs ± 228 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "peak memory: 175.69 MiB, increment: 0.00 MiB\n",
       "Vector Subtraction takes:\n",
-      "2.1 µs ± 44.9 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Subtraction is 25.3359051117995 times faster than Homomorphic Subtraction\n"
+      "1.61 µs ± 11.5 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 175.86 MiB, increment: 0.00 MiB\n",
+      "Vector Subtraction is 32.6571262505289 times faster than Homomorphic Subtraction\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Subtraction takes:\")\n",
     "he_sub =  %timeit -o (enc_v2 - enc_v1)\n",
+    "he_sub_mem =  %memit -o (enc_v2 - enc_v1)\n",
+    "\n",
+    "\n",
     "print(\"Vector Subtraction takes:\")\n",
     "v_sub = %timeit -o (np.array(v2) - np.array(v1))\n",
+    "v_sub_mem = %memit -o (np.array(v2) - np.array(v1))\n",
     "\n",
     "res = he_sub.best / v_sub.best\n",
     "print(\"Vector Subtraction is {} times faster than Homomorphic Subtraction\".format(res))"
@@ -251,11 +265,11 @@
     {
      "data": {
       "text/plain": [
-       "[-4.999999999856498,\n",
-       " -0.9999999987545065,\n",
-       " -2.0000000001307074,\n",
-       " -3.0000000030251552,\n",
-       " -3.9999999999604876]"
+       "[-4.999999997377462,\n",
+       " -0.9999999985669354,\n",
+       " -2.0000000011238805,\n",
+       " -3.0000000001549534,\n",
+       " -4.000000001418278]"
       ]
      },
      "execution_count": 10,
@@ -287,18 +301,23 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Negation takes:\n",
-      "52.5 µs ± 1.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "39.5 µs ± 214 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "peak memory: 176.54 MiB, increment: 0.00 MiB\n",
       "Vector Subtraction takes:\n",
-      "1.16 µs ± 12.5 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-      "Vector Negation is 45.239837229104964 times faster than Homomorphic Negation\n"
+      "934 ns ± 5.37 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 176.54 MiB, increment: 0.00 MiB\n",
+      "Vector Negation is 42.27770425793887 times faster than Homomorphic Negation\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Negation takes:\")\n",
     "he_neg =  %timeit -o (-enc_v1)\n",
+    "he_neg_mem =  %memit -o (-enc_v1)\n",
+    "\n",
     "print(\"Vector Subtraction takes:\")\n",
     "v_neg = %timeit -o (-np.array(v1))\n",
+    "v_neg_mem = %memit -o (-np.array(v1))\n",
     "\n",
     "res = he_neg.best / v_neg.best\n",
     "print(\"Vector Negation is {} times faster than Homomorphic Negation\".format(res))"
@@ -321,11 +340,11 @@
     {
      "data": {
       "text/plain": [
-       "[625.0005866668016,\n",
-       " 1.0000009368078793,\n",
-       " 16.00001502308851,\n",
-       " 81.00007640350648,\n",
-       " 256.00024030782794]"
+       "[625.000585293541,\n",
+       " 1.0000009341151213,\n",
+       " 16.00001505487296,\n",
+       " 81.00007606110789,\n",
+       " 256.00024063446153]"
       ]
      },
      "execution_count": 12,
@@ -357,18 +376,23 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Negation takes:\n",
-      "6.29 ms ± 35.2 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "6.07 ms ± 58.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "peak memory: 178.18 MiB, increment: 0.00 MiB\n",
       "Vector Subtraction takes:\n",
-      "1.76 µs ± 12.2 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-      "Vector Negation is 3591.9838686123685 times faster than Homomorphic Negation\n"
+      "1.76 µs ± 7.83 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 178.18 MiB, increment: 0.00 MiB\n",
+      "Vector Negation is 3435.589111884566 times faster than Homomorphic Negation\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Negation takes:\")\n",
     "he_pow =  %timeit -o (enc_v1 ** 4)\n",
+    "he_pow_mem =  %memit -o (enc_v1 ** 4)\n",
+    "\n",
     "print(\"Vector Subtraction takes:\")\n",
     "v_pow = %timeit -o (np.array(v1) ** 4)\n",
+    "v_pow_mem = %memit -o (np.array(v1) ** 4)\n",
     "\n",
     "res = he_pow.best / v_pow.best\n",
     "print(\"Vector Negation is {} times faster than Homomorphic Negation\".format(res))"
@@ -391,7 +415,7 @@
     {
      "data": {
       "text/plain": [
-       "[50.00000598789758]"
+       "[50.00000864874787]"
       ]
      },
      "execution_count": 14,
@@ -423,18 +447,24 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Dot Product takes:\n",
-      "9.61 ms ± 84.2 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "9.28 ms ± 76 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "peak memory: 180.00 MiB, increment: 0.00 MiB\n",
       "Vector Dot Product takes:\n",
-      "2.39 µs ± 65.3 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Dot Product is 4039.082239497987 times faster than Homomorphic Dot Product\n"
+      "1.9 µs ± 18.7 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 180.00 MiB, increment: 0.00 MiB\n",
+      "Vector Dot Product is 4863.666414601436 times faster than Homomorphic Dot Product\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Dot Product takes:\")\n",
     "he_dp =  %timeit -o (enc_v1.dot(enc_v2))\n",
+    "he_dp_mem =  %memit -o (enc_v1.dot(enc_v2))\n",
+    "\n",
     "print(\"Vector Dot Product takes:\")\n",
     "v_dp = %timeit -o (np.array(v1).dot(np.array(v2)))\n",
+    "v_dp_mem = %memit -o (np.array(v1).dot(np.array(v2)))\n",
+    "\n",
     "res = he_dp.best / v_dp.best\n",
     "\n",
     "print(\"Vector Dot Product is {} times faster than Homomorphic Dot Product\".format(res))"
@@ -473,7 +503,7 @@
     {
      "data": {
       "text/plain": [
-       "[735.0000985280301, 86.75001165200263, 413.00005566849956]"
+       "[735.0000984405782, 86.75001162554906, 413.0000555187746]"
       ]
      },
      "execution_count": 17,
@@ -505,18 +535,24 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Matrix Multiplication takes:\n",
-      "95.6 ms ± 4.17 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "20.7 ms ± 161 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "peak memory: 195.84 MiB, increment: 0.92 MiB\n",
       "Vector Matrix Multiplication takes:\n",
-      "7.13 µs ± 61.6 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Matrix Multiplication is 12776.268429061454 times faster than HomomorphicMatrix Multiplication\n"
+      "5.72 µs ± 107 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "peak memory: 195.91 MiB, increment: 0.00 MiB\n",
+      "Vector Matrix Multiplication is 3644.0243077417385 times faster than HomomorphicMatrix Multiplication\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Matrix Multiplication takes:\")\n",
     "he_mm =  %timeit -o (enc_v1.matmul(matrix))\n",
+    "he_mm_mem =  %memit -o (enc_v1.matmul(matrix))\n",
+    "\n",
     "print(\"Vector Matrix Multiplication takes:\")\n",
     "v_mm = %timeit -o (np.matmul(v1,matrix))\n",
+    "v_mm_mem = %memit -o (np.matmul(v1,matrix))\n",
+    "\n",
     "res = he_mm.best / v_mm.best\n",
     "\n",
     "print(\"Vector Matrix Multiplication is {} times faster than HomomorphicMatrix Multiplication\".format(res))"
@@ -537,19 +573,11 @@
    "source": [
     "In this notebook, we saw various capabilities and operations that are supported by CKKS scheme. These include - addition, subtraction, negation, power, multiplication, dot product, polynomial evaluation and matrix multiplication. In the future work, we can start looking into another capability of the CKKSvector that allows image block to columns operation and can be used for CNN for classification. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60f6d96c-4f9a-407b-a075-c690b3d97412",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -563,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
