--- a/notebooks/tenseal_introduction.ipynb
+++ b/notebooks/tenseal_introduction.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<tenseal.enc_context.Context at 0x7f0e0ce9a2e0>"
+       "<tenseal.enc_context.Context at 0x7fda29c16820>"
       ]
      },
      "execution_count": 2,
@@ -164,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "<tenseal.tensors.bfvvector.BFVVector at 0x7f0e0ce49340>"
+       "<tenseal.tensors.bfvvector.BFVVector at 0x7fda29bbd550>"
       ]
      },
      "execution_count": 4,
@@ -373,7 +373,7 @@
    "id": "29ae2e76-b3a1-4308-a2cb-78374ca2e308",
    "metadata": {},
    "source": [
-    "### Timing for each operation"
+    "### Timing and memory for each operation"
    ]
   },
   {
@@ -384,7 +384,8 @@
    "outputs": [],
    "source": [
     "from time import time\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -428,20 +429,23 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Addition takes:\n",
-      "27 µs ± 976 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "24.9 µs ± 96.6 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "peak memory: 97.21 MiB, increment: 0.10 MiB\n",
       "Vector Addition takes:\n",
-      "2.07 µs ± 36.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Addition is 12.887042566865047 times faster than Homomorphic Addition\n"
+      "1.71 µs ± 8.15 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 97.43 MiB, increment: 0.00 MiB\n",
+      "Vector Addition is 14.594563938023983 times faster than Homomorphic Addition\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Addition takes:\")\n",
     "he_add =  %timeit -o (enc_v1 + enc_v2)\n",
+    "he_mem = %memit -o (enc_v1 + enc_v2)\n",
     "print(\"Vector Addition takes:\")\n",
     "v_add = %timeit -o (np.array(v1) + np.array(v2))\n",
+    "v_mem = %memit -o (np.array(v1) + np.array(v2))\n",
     "res = he_add.best / v_add.best\n",
-    "\n",
     "print(\"Vector Addition is {} times faster than Homomorphic Addition\".format(res))"
    ]
   },
@@ -464,18 +468,23 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Subtraction takes:\n",
-      "25.2 µs ± 104 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "23.5 µs ± 55.2 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "peak memory: 97.70 MiB, increment: 0.00 MiB\n",
       "Vector Subtraction takes:\n",
-      "2.06 µs ± 32.2 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Subtraction is 12.345815039326867 times faster than Homomorphic Subtraction\n"
+      "1.64 µs ± 6.78 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 97.86 MiB, increment: 0.00 MiB\n",
+      "Vector Subtraction is 14.365207002802025 times faster than Homomorphic Subtraction\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Subtraction takes:\")\n",
     "he_sub =  %timeit -o (enc_v2 - enc_v1)\n",
+    "he_sub_mem =  %memit -o (enc_v2 - enc_v1)\n",
+    "\n",
     "print(\"Vector Subtraction takes:\")\n",
     "v_sub = %timeit -o (np.array(v2) - np.array(v1))\n",
+    "v_sub_mem = %memit -o (np.array(v2) - np.array(v1))\n",
     "\n",
     "res = he_sub.best / v_sub.best\n",
     "print(\"Vector Subtraction is {} times faster than Homomorphic Subtraction\".format(res))"
@@ -500,18 +509,24 @@
      "output_type": "stream",
      "text": [
       "Homomorphic Multiplication takes:\n",
-      "5.1 ms ± 92.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "5.02 ms ± 26.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "peak memory: 98.33 MiB, increment: 0.00 MiB\n",
       "Vector Multiplication takes:\n",
-      "2.08 µs ± 25.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Vector Multiplication is 2430.3839794233263 times faster than Homomorphic Multiplication\n"
+      "1.66 µs ± 16.4 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "peak memory: 98.33 MiB, increment: 0.00 MiB\n",
+      "Vector Multiplication is 3020.2374779763254 times faster than Homomorphic Multiplication\n"
      ]
     }
    ],
    "source": [
     "print(\"Homomorphic Multiplication takes:\")\n",
     "he_mul =  %timeit -o (enc_v2 * enc_v1)\n",
+    "he_mul_mem =  %memit -o (enc_v2 * enc_v1)\n",
+    "\n",
     "print(\"Vector Multiplication takes:\")\n",
     "v_mul = %timeit -o (np.array(v2) * np.array(v1))\n",
+    "he_mul_mem =  %memit -o (enc_v2 * enc_v1)\n",
+    "\n",
     "\n",
     "res = he_mul.best / v_mul.best\n",
     "print(\"Vector Multiplication is {} times faster than Homomorphic Multiplication\".format(res))"
@@ -530,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -544,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
